Fixed container and spacing issues for migration

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -6,126 +6,126 @@
 #migrated-site {
 
 
-// Stylseheet overrides
-// -----------------------------
+  // Stylesheet overrides
+  // -----------------------------
 
 
-// Template wrapper (replace with corresponding template classes)
-.container, .full-width {
-  width: 100%;
-  max-width: 100%;
-  margin: 0;
-}
-  
-// Main content spacing (replace with corresponding template class)
-.container, .full-width {
-  padding: 0;
-}
-
-// Widget overflow to allow 10S overlays to display correctly
-.widget.content {
-  overflow: inherit;
-}
-
-
-section.template-content {
-    padding:  0;
-}
-
-// Migration styles
-// -----------------------------
-
-
-// Replace with corresponding template values
-@container-width: 85%;
-
-@spacing__first--desktop: 20px;
-@spacing__first--tablet:  30px;
-@spacing__first--mobile:  20px;
-
-@spacing--other: 30px;
-
-
-// Applies spacing to widgets to mimic container width
-.empty-zone,
-#page-zones__main:empty,
-#page-zones__main > .widget:not(.row),
-.row:not(.widget):not(.row--width-no-padding) .row__container {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: @container-width;
-  width: 90%;
-}
-
-
-// Move spacing to first widget in the main zone (not sections)
-&.edit #page-zones__main-overlay + .widget:not(.row),
-#page-zones__main > .widget:not(.row):first-child {
-  margin-top: @spacing__first--desktop;
-
-  @media @tablet {
-    margin-top: @spacing__first--tablet;
+  // Template wrapper (replace with corresponding template classes)
+  .container, .full-width {
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
   }
-  @media @mobile {
-    margin-top: @spacing__first--mobile;
-  }
-}
-
-
-// Move spacing to last widget in the main zone (not sections)
-#page-zones__main > .widget:not(.row):last-child {
-  margin-bottom: @spacing__first--desktop;
-
-  @media @tablet {
-    margin-bottom: @spacing__first--tablet;
-  }
-  @media @mobile {
-    margin-bottom: @spacing__first--mobile;
-  }
-}
-
-
-// Add spacing to the top of a widget when it follows a section
-#page-zones__main > .row + .widget:not(.row) {
-  margin-top: @spacing--other;
-}
-
-
-// Remove spacing if widget follows a light section (change to dark if template has a dark BG)
-#page-zones__main > .row.style--light + .widget:not(.row) {
-  margin-top: 0;
-}
-
-
-// Adds spacing to the section when a widget is before it
-#page-zones__main > .widget:not(.row) + .row {
-  margin-bottom: @spacing--other;
-  margin-top: @spacing--other;
-
-  &:not(:last-child) {
-       margin-bottom: 0;
-  }
-}
-
-// Section controls
-.row-overlay:before,
-.row-overlay:after {
-    background: none !important;
-}
-
-@media only screen and (max-width: 1024px) {
     
-    .template-content--blog .full-width {
-        
-        #page-zones__main > .widget:not(.row):first-child {
-            margin-top :0;
-        }
-        
-        #page-zones__main-widgets__blogpost {
-            width: 100%;
-            max-width: 100%;
-        }
+  // Main content spacing (replace with corresponding template class)
+  .container, .full-width {
+    padding: 0;
+  }
+
+  // Widget overflow to allow 10S overlays to display correctly
+  .widget.content {
+    overflow: inherit;
+  }
+
+
+  section.template-content {
+      padding:  0;
+  }
+
+  // Migration styles
+  // -----------------------------
+
+
+  // Replace with corresponding template values
+  @container-width: 85%;
+
+  @spacing__first--desktop: 20px;
+  @spacing__first--tablet:  30px;
+  @spacing__first--mobile:  20px;
+
+  @spacing--other: 30px;
+
+
+  // Applies spacing to widgets to mimic container width
+  .empty-zone,
+  #page-zones__main:empty,
+  #page-zones__main > .widget:not([data-name="row"]),
+  [data-name="row"] .row:not(.row--width-no-padding) .row__container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: @container-width;
+    width: 90%;
+  }
+
+
+  // Move spacing to first widget in the main zone (not sections)
+  &.edit #page-zones__main-overlay + .widget:not([data-name="row"]),
+  #page-zones__main > .widget:not([data-name="row"]):first-child {
+    margin-top: @spacing__first--desktop;
+
+    @media @tablet {
+      margin-top: @spacing__first--tablet;
     }
-}
+    @media @mobile {
+      margin-top: @spacing__first--mobile;
+    }
+  }
+
+
+  // Move spacing to last widget in the main zone (not sections)
+  #page-zones__main > .widget:not([data-name="row"]):last-child {
+    margin-bottom: @spacing__first--desktop;
+
+    @media @tablet {
+      margin-bottom: @spacing__first--tablet;
+    }
+    @media @mobile {
+      margin-bottom: @spacing__first--mobile;
+    }
+  }
+
+
+  // Add spacing to the top of a widget when it follows a section
+  #page-zones__main > [data-name="row"] + .widget:not([data-name="row"]) {
+    margin-top: @spacing--other;
+  }
+
+
+  // Remove spacing if widget follows a light section (change to dark if template has a dark BG)
+  #page-zones__main > [data-name="row"].style--dark + .widget:not([data-name="row"]) {
+    margin-top: 0;
+  }
+
+
+  // Adds spacing to the section when a widget is before it
+  #page-zones__main > .widget:not([data-name="row"]) + [data-name="row"] {
+    margin-bottom: @spacing--other;
+    margin-top: @spacing--other;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  // Section controls
+  .row-overlay:before,
+  .row-overlay:after {
+      background: none !important;
+  }
+
+  @media only screen and (max-width: 1024px) {
+      
+      .template-content--blog .full-width {
+          
+          #page-zones__main > .widget:not([data-name="row"]):first-child {
+              margin-top :0;
+          }
+          
+          #page-zones__main-widgets__blogpost {
+              width: 100%;
+              max-width: 100%;
+          }
+      }
+  }
 
 } // End of #migrated-site
